--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: fadi.farook@mail.utoronto.ca
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text:
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: fadi, fadi farook, farook, uoft, university of toronto, academic-website, portfolio-website, nonlinear optics, lasers, optics, laser-matter interaction, laser ablation, biological optics, ultrafast, physics PhD # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
